--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Wemon</title>
     <style>
         body{
-            background-image: url('/images/wemon-the-app-bg-cover-landing.png');
+            background-image: url('./images/wemon-the-app-bg-cover-landing.png');
             background-position: center;
             background-size: cover;
             background-repeat: no-repeat;
